--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Medicine Chest</string>
     <string name="title_activity_info">InfoActivity</string>
+    <string name="title_activity_add">AddActivity</string>
 </resources>
