--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Medicine Chest</string>
     <string name="title_activity_info">InfoActivity</string>
     <string name="title_activity_add">AddActivity</string>
+    <string name="title_activity_medicine_input">MedicineInput</string>
 </resources>
